# surface-defect-detection

./: README.md  main.py  pyproject.toml
