[tool.poetry]
name = "surface-defect-detection"
version = "0.1.0"
description = "Basic project that detects defects on surfaces."
authors = ["vladmld <vlad.moldoveanu@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.10.12,>=3.9"
opencv-python = "^4.8.1.78"
numpy = "^1.26.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
